<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="23dp">
    <TextView
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="4dp"
    />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingHorizontal="4dp"
                  android:textStyle="bold"
                  android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                  android:text="@string/http_listening_port"/>
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/http_port"
                  android:inputType="number"
                  android:id="@+id/http_port"
                  android:minHeight="?android:attr/listPreferredItemHeight"
                  android:importantForAutofill="no"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingHorizontal="4dp"
                  android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                  android:textStyle="bold"
                  android:text="@string/ftp_listening_port"/>
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/ftp_port"
                  android:inputType="number"
                  android:id="@+id/ftp_port"
                  android:minHeight="?android:attr/listPreferredItemHeight"
                  android:importantForAutofill="no"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <CheckBox android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:id="@+id/enable_ftp"
                  android:minHeight="?android:attr/listPreferredItemHeight"
                  android:text="@string/enable_ftp"/>
        <CheckBox android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:id="@+id/enable_http"
                  android:minHeight="?android:attr/listPreferredItemHeight"
                  android:text="@string/enable_http"/>
    </LinearLayout>

</LinearLayout>
