<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/root_navigation"
            app:startDestination="@id/nav_services">
    <fragment android:id="@+id/nav_server" android:name="com.example.httpserver.app.ui.view.server.ServerFragment"
              android:label="@string/server" tools:layout="@layout/fragment_server">
        <action android:id="@+id/action_nav_server_to_nav_basic_authen"
                app:destination="@id/nav_auth"/>
        <action android:id="@+id/action_nav_server_to_nav_http_server_config"
                app:destination="@id/nav_http_server_config"/>
        <action android:id="@+id/action_nav_server_to_nav_qr_code" app:destination="@id/nav_qr_code"/>
    </fragment>

    <dialog android:id="@+id/nav_auth"
              android:name="com.example.httpserver.app.ui.view.server.WebSecurityDialog"
              android:label="@string/security">
        <action android:id="@+id/action_nav_basic_authen_to_nav_server"
                app:popUpTo="@id/nav_server"/>
    </dialog>
    <dialog android:id="@+id/nav_http_server_config" android:name="com.example.httpserver.app.ui.view.server.WebServerDialog"
            android:label="@string/server_config">
        <action android:id="@+id/action_nav_http_server_config_to_nav_server"
                app:popUpTo="@id/nav_server"/>
    </dialog>
    <dialog android:id="@+id/nav_qr_code" android:name="com.example.httpserver.app.ui.view.server.QRCodeDialog"
              android:label="QRCodeDialog">
        <action android:id="@+id/action_nav_qr_code_to_nav_server"
                app:popUpTo="@id/nav_server"/>
    </dialog>
    <fragment android:id="@+id/nav_services"
              android:name="com.example.httpserver.app.ui.view.services.ServicesFragment"
              android:label="Services"
              tools:layout="@layout/fragment_services"/>
</navigation>