<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:minWidth="500dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="-1dp"
        android:orientation="vertical"
        android:paddingTop="9dip"
        android:paddingBottom="3dip"
        android:paddingStart="3dip"
        android:paddingEnd="1dip">

    <LinearLayout android:id="@+id/title_template"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:minHeight="54dip"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:layout_marginTop="6dip"
                  android:layout_marginBottom="9dip"
                  android:layout_marginStart="10dip"
                  android:layout_marginEnd="10dip">
        <ImageView android:id="@+id/icon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="top"
                   android:paddingTop="6dip"
                   android:paddingEnd="10dip"/>
        <TextView android:id="@+id/title"
                  style="?android:attr/textAppearanceLarge"
                  android:singleLine="true"
                  android:ellipsize="end"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textAlignment="viewStart"
                  android:text="@string/basic_authentication"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:minHeight="54dip"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:layout_marginBottom="9dip"
                  android:layout_marginStart="10dip"
                  android:layout_marginEnd="10dip">
        <EditText android:id="@+id/username"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="10dip"
                  android:lines="1"
                  android:hint="@string/username"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:minHeight="54dip"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:layout_marginBottom="9dip"
                  android:layout_marginStart="10dip"
                  android:layout_marginEnd="10dip">
        <EditText android:id="@+id/password"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="10dip"
                  android:lines="1"
                  android:inputType="textPassword"
                  android:hint="@string/password"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/buttonPanel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:minHeight="54dip"
                  android:orientation="vertical" >
        <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dip"
                android:paddingStart="2dip"
                android:paddingEnd="2dip"
                android:measureWithLargestChild="true">
            <LinearLayout android:id="@+id/leftSpacer"
                          android:layout_weight="0.25"
                          android:layout_width="0dip"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:visibility="gone" />
            <Button android:id="@+id/select"
                    android:layout_width="0dip"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:text="@string/select"/>
            <Button android:id="@+id/cancel"
                    android:layout_width="0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:text="@string/cancel"
                    android:layout_height="wrap_content" />
            <Button android:id="@+id/ok"
                    android:layout_width="0dip"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:text="@string/ok"
                    android:layout_height="wrap_content" />
            <LinearLayout android:id="@+id/rightSpacer"
                          android:layout_width="0dip"
                          android:layout_weight="0.25"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
